# pyspark-nlp-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  reqirements.txt
