[tool.poetry]
name = "pyspark-nlp-docker"
version = "0.1.0"
description = ""
authors = ["Toshihiro Yamaguchi <toshihiro.engineer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typing-extensions = "<4.2.0"
wordcloud = "^1.8.2"
plotly = "^5.9.0"
gensim = "^4.2.0"
nltk = "^3.7"
scipy = "^1.9.0"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
